# decider-genetics

./: .gitignore  README.md  create_knowledge_graph.py  docker-compose-next.yml  docker-compose.yml  pyproject.toml
config/: biochatter-next.yaml  biocypher_config.yaml  schema_config.yaml
data/: oncokb_biomarker_drug_associations.tsv  synthetic_clinical.csv  synthetic_cns.csv  synthetic_variants.csv
data/oncodash files/: BiologicalProcess-part000.csv  GeneToBiologicalProcess-part000.csv
decider_genetics/adapters/: all_variants_adapter.py  clinical_adapter.py  cn_genes_adapter.py  oncokb_adapter.py  pandas_adapter.py
scripts/: synthesise_data.py
